--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -126,65 +126,71 @@
 </div>
 
 <script type="module">
-// ===== Imports =====
+// ===== 依赖（ESM）=====
 import * as secp from 'https://esm.run/@noble/secp256k1@1.7.1';
 import { ripemd160 } from 'https://esm.run/@noble/hashes@1.4.0/ripemd160';
-import { keccak256 } from 'https://cdn.jsdelivr.net/npm/js-sha3@0.9.2/+esm';
+import { keccak_256 } from 'https://cdn.jsdelivr.net/npm/js-sha3@0.9.2/+esm';
 
-// ===== Utils =====
+// ===== 小工具 =====
 const te = new TextEncoder();
 const td = new TextDecoder();
-const $  = (id) => document.getElementById(id);
-const EXPECT_WL_SHA256 =
-  '2f5eed53a4727b4bf8880d8f3f199efc90e58503646d9ff8eff3a2ed3b24dbda'; // english.txt
+const expectWordlistHash = '2f5eed53a4727b4bf8880d8f3f199efc90e58503646d9ff8eff3a2ed3b24dbda';
+const curveN = secp.CURVE.n;
+const $ = id => document.getElementById(id);
 
-function bytesToHex(u8){
-  let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s;
-}
-function hexToBytes(hex){
-  const h=String(hex).replace(/^0x/i,'');
-  if(h.length%2) throw new Error('hex length must be even');
-  const out=new Uint8Array(h.length/2);
-  for(let i=0;i<out.length;i++) out[i]=parseInt(h.slice(i*2,i*2+2),16);
-  return out;
-}
-function concatBytes(...arrs){
-  let len=0; for(const a of arrs) len+=a.length;
-  const out=new Uint8Array(len);
-  let off=0; for(const a of arrs){ out.set(a,off); off+=a.length; }
-  return out;
-}
+function bytesToHex(u8){ let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s; }
+function hexToBytes(hex){ const h=hex.replace(/^0x/i,''); const out=new Uint8Array(h.length/2); for(let i=0;i<out.length;i++) out[i]=parseInt(h.slice(i*2,i*2+2),16); return out; }
+function concatBytes(...arrs){ let len=0; for(const a of arrs) len+=a.length; const out=new Uint8Array(len); let off=0; for(const a of arrs){ out.set(a,off); off+=a.length; } return out; }
 function ser32(i){ const b=new Uint8Array(4); b[0]=(i>>>24)&255;b[1]=(i>>>16)&255;b[2]=(i>>>8)&255;b[3]=i&255; return b; }
 
-// WebCrypto digests
-async function wcSHA256(bytes){
-  const u8 = bytes instanceof Uint8Array ? bytes : new Uint8Array(bytes);
-  return new Uint8Array(await crypto.subtle.digest('SHA-256', u8));
+// WebCrypto SHA-256（统一入口）
+async function wc_sha256(bytes){
+  const buf = bytes instanceof Uint8Array ? bytes : new Uint8Array(bytes);
+  const out = await crypto.subtle.digest('SHA-256', buf);
+  return new Uint8Array(out);
 }
 
-// Base58
-function base58encode(data){
-  const ALPH='123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz';
-  let x = BigInt('0x'+bytesToHex(data)); let out='';
-  while(x>0n){ const m=x%58n; out=ALPH[Number(m)]+out; x/=58n; }
-  for(let i=0;i<data.length && data[i]===0;i++) out='1'+out;
-  return out || '1';
+// 异步 hash160 = RIPEMD160(SHA256(x))
+async function hash160_async(data){
+  const s1 = await wc_sha256(data);
+  return ripemd160(s1);
 }
-async function base58checkAsync(payload){
-  const s1 = await wcSHA256(payload);
-  const s2 = await wcSHA256(s1);
+
+// Base58Check(payload) —— 双 SHA-256（异步）
+async function base58check_async(payload){
+  const s1 = await wc_sha256(payload);
+  const s2 = await wc_sha256(s1);
   const checksum = s2.slice(0,4);
   return base58encode(concatBytes(payload, checksum));
 }
+function base58encode(data){
+  const ALPH='123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz';
+  let x = BigInt('0x'+bytesToHex(data)), out='';
+  while (x > 0n){ const mod=x%58n; out = ALPH[Number(mod)] + out; x/=58n; }
+  for (let i=0;i<data.length && data[i]===0;i++) out = '1' + out;
+  return out || '1';
+}
 
-// ===== BIP39 =====
+// ===== WebCrypto：PBKDF2 / HMAC-SHA512 =====
+async function hmacSHA512(keyBytes, dataBytes){
+  const key = await crypto.subtle.importKey('raw', keyBytes, { name:'HMAC', hash:'SHA-512' }, false, ['sign']);
+  const sig = await crypto.subtle.sign('HMAC', key, dataBytes);
+  return new Uint8Array(sig);
+}
+async function pbkdf2_sha512(passwordBytes, saltBytes, iterations, dkLen){
+  const key = await crypto.subtle.importKey('raw', passwordBytes, 'PBKDF2', false, ['deriveBits']);
+  const bits = await crypto.subtle.deriveBits({ name:'PBKDF2', hash:'SHA-512', salt: saltBytes, iterations }, key, dkLen*8);
+  return new Uint8Array(bits);
+}
+
+// ===== BIP39 助记词 =====
 let WORDS = null;
 async function loadWordlistOnce(){
   if (WORDS) return WORDS;
   const res = await fetch('./english.txt');
   const buf = new Uint8Array(await res.arrayBuffer());
-  const got = bytesToHex(await wcSHA256(buf));
-  if (got !== EXPECT_WL_SHA256) throw new Error('english.txt 校验失败：SHA-256 不匹配');
+  const gotHash = bytesToHex(await wc_sha256(buf));
+  if (gotHash !== expectWordlistHash) throw new Error('english.txt 校验失败：SHA-256 不匹配');
   const text = td.decode(buf).replace(/\r/g,'').trim();
   WORDS = text.split('\n');
   return WORDS;
@@ -195,17 +201,13 @@ function bitsToIndices(bits, group=11){
 }
 async function genMnemonic(entBits=128){
   if(!WORDS) await loadWordlistOnce();
-  const ENT=entBits, CS=ENT/32;
-  const ent = new Uint8Array(ENT/8); crypto.getRandomValues(ent);
-  const hash = await wcSHA256(ent);
-  const allBits = bytesToBits(ent).concat(bytesToBits(hash).slice(0,CS));
-  const idx = bitsToIndices(allBits,11);
-  return idx.map(i=>WORDS[i]).join(' ');
-}
-async function pbkdf2_sha512(passwordBytes, saltBytes, iterations, dkLen){
-  const key  = await crypto.subtle.importKey('raw', passwordBytes, 'PBKDF2', false, ['deriveBits']);
-  const bits = await crypto.subtle.deriveBits({name:'PBKDF2', hash:'SHA-512', salt:saltBytes, iterations}, key, dkLen*8);
-  return new Uint8Array(bits);
+  const ENT = entBits, CS=ENT/32;
+  const ent=new Uint8Array(ENT/8); crypto.getRandomValues(ent);
+  const hash = await wc_sha256(ent);
+  const allBits = bytesToBits(ent).concat(bytesToBits(hash).slice(0, CS));
+  const idx = bitsToIndices(allBits, 11);
+  const words = idx.map(i => WORDS[i]);
+  return words.join(' ');
 }
 async function mnemonicToSeed(mnemonic, passphrase){
   const salt = te.encode('mnemonic' + (passphrase || '')).buffer;
@@ -213,130 +215,125 @@ async function mnemonicToSeed(mnemonic, passphrase){
   return pbkdf2_sha512(new Uint8Array(pwd), new Uint8Array(salt), 2048, 64);
 }
 
-// ===== BIP32 =====
-const CURVE_N = secp.CURVE.n;
-
-async function hmacSHA512(keyBytes, dataBytes){
-  const key = await crypto.subtle.importKey('raw', keyBytes, {name:'HMAC', hash:'SHA-512'}, false, ['sign']);
-  const sig = await crypto.subtle.sign('HMAC', key, dataBytes);
-  return new Uint8Array(sig);
-}
-async function serializeXPUB(pub, chain, depth, parentFP, child){
+// ===== xprv/xpub 序列化（异步 Base58Check）=====
+async function serializeXPUB_async(pub, chain, depth, parentFP, child){
   const ver = new Uint8Array([0x04,0x88,0xB2,0x1E]); // xpub
   const payload = concatBytes(ver, new Uint8Array([depth&255]), parentFP, ser32(child), chain, pub);
-  return base58checkAsync(payload);
+  return await base58check_async(payload);
 }
-async function serializeXPRV(key, chain, depth, parentFP, child){
+async function serializeXPRV_async(key, chain, depth, parentFP, child){
   const ver = new Uint8Array([0x04,0x88,0xAD,0xE4]); // xprv
   const payload = concatBytes(ver, new Uint8Array([depth&255]), parentFP, ser32(child), chain, new Uint8Array([0]), key);
-  return base58checkAsync(payload);
+  return await base58check_async(payload);
 }
+
+// ===== BIP32：Root & CKDpriv（适配异步）=====
 async function bip32RootFromSeed(seed){
-  const I  = await hmacSHA512(te.encode('Bitcoin seed'), seed);
-  const IL = I.slice(0,32), IR=I.slice(32);
-  const k  = BigInt('0x'+bytesToHex(IL));
-  if (k===0n || k>=CURVE_N) throw new Error('Invalid master key');
-  const key32=IL, chain=IR, depth=0, child=0, parentFP=new Uint8Array([0,0,0,0]);
-  const pub = secp.getPublicKey(key32, true);
-  const xprv = await serializeXPRV(key32, chain, depth, parentFP, child);
-  const xpub = await serializeXPUB(pub,   chain, depth, parentFP, child);
+  const I = await hmacSHA512(te.encode('Bitcoin seed'), seed);
+  const IL = I.slice(0,32), IR = I.slice(32);
+  const k = BigInt('0x'+bytesToHex(IL));
+  if (k === 0n || k >= curveN) throw new Error('Invalid master key');
+  const key32 = IL, chain = IR, depth=0, child=0, parentFP=new Uint8Array([0,0,0,0]);
+  const pub  = secp.getPublicKey(key32, true);
+  const xprv = await serializeXPRV_async(key32, chain, depth, parentFP, child);
+  const xpub = await serializeXPUB_async(pub,  chain, depth, parentFP, child);
   return { key:key32, chain, pub, depth, child, parentFP, xprv, xpub };
-}
-async function hash160Async(data){
-  const s1 = await wcSHA256(data);
-  return ripemd160(s1);
 }
 async function CKDpriv(node, index, hardened){
   const { key, chain, depth, pub } = node;
-  const idx = hardened ? (index|0x80000000) : index;
-  const data = hardened
-    ? concatBytes(new Uint8Array([0]), key, ser32(idx))
-    : concatBytes(secp.getPublicKey(key, true), ser32(idx));
-  const I  = await hmacSHA512(chain, data);
-  const IL = I.slice(0,32), IR=I.slice(32);
-  const ki = (BigInt('0x'+bytesToHex(IL)) + BigInt('0x'+bytesToHex(key))) % CURVE_N;
-  if (ki===0n) throw new Error('Invalid child key');
-  const keyChild   = hexToBytes(ki.toString(16).padStart(64,'0'));
-  const chainChild = IR;
-  const depthChild = depth+1;
-  const parentFP   = (await hash160Async(pub)).slice(0,4);
-  const pubChild   = secp.getPublicKey(keyChild, true);
-  const xprv = await serializeXPRV(keyChild, chainChild, depthChild, parentFP, idx);
-  const xpub = await serializeXPUB(pubChild, chainChild, depthChild, parentFP, idx);
+  const idx = hardened ? (index | 0x80000000) : index;
+  const data = hardened ? concatBytes(new Uint8Array([0]), key, ser32(idx))
+                        : concatBytes(secp.getPublicKey(key, true), ser32(idx));
+  const I = await hmacSHA512(chain, data);
+  const IL = I.slice(0,32), IR = I.slice(32);
+  const ki = (BigInt('0x'+bytesToHex(IL)) + BigInt('0x'+bytesToHex(key))) % curveN;
+  if (ki === 0n) throw new Error('Invalid child key');
+  const keyChild = hexToBytes(ki.toString(16).padStart(64, '0'));
+  const chainChild = IR, depthChild = depth+1;
+  const parentFP = (await hash160_async(pub)).slice(0,4);
+  const pubChild = secp.getPublicKey(keyChild, true);
+  const xprv = await serializeXPRV_async(keyChild, chainChild, depthChild, parentFP, idx);
+  const xpub = await serializeXPUB_async(pubChild, chainChild, depthChild, parentFP, idx);
   return { key:keyChild, chain:chainChild, pub:pubChild, depth:depthChild, child:idx, parentFP, xprv, xpub };
 }
 
-// ===== ETH address (js-sha3 keccak256 + EIP-55) =====
-function ethAddressFromUncompressed(pub64NoPrefix){
-  const h = keccak256(pub64NoPrefix);           // hex string
-  return '0x' + h.slice(64-40);                 // last 20 bytes
-}
-function toChecksumAddress(addr0xLower){
-  const raw = String(addr0xLower).replace(/^0x/,'').toLowerCase();
-  const kh  = keccak256(raw);
-  let out='0x';
-  for(let i=0;i<40;i++) out += (parseInt(kh[i],16) >= 8) ? raw[i].toUpperCase() : raw[i];
+// ===== 以太坊地址（EIP-55）=====
+function ethChecksumAddress(bytes20){
+  const hex = bytesToHex(bytes20).toLowerCase();
+  const hashHex = keccak_256(hex); // 对 hex 字符串再 keccak_256
+  let out = '0x';
+  for (let i=0;i<40;i++){
+    const nibble = parseInt(hashHex[i], 16);
+    out += (nibble >= 8) ? hex[i].toUpperCase() : hex[i];
+  }
   return out;
 }
-function deriveEthAddressFromNode(node){
-  const uncompressed = secp.Point.fromHex(node.pub).toRawBytes(false); // 65B
-  const noPrefix64   = uncompressed.slice(1);
-  return toChecksumAddress(ethAddressFromUncompressed(noPrefix64));
+function ethAddressFromUncompressed(uncomp65){
+  // uncomp = 0x04 || X(32) || Y(32)
+  const body = uncomp65.slice(1); // 64 bytes
+  const hash = new Uint8Array(keccak_256.arrayBuffer(body));
+  const addr20 = hash.slice(12);  // 后 20 字节
+  return ethChecksumAddress(addr20);
 }
 
-// ===== State =====
-let gSeed=null, gRoot=null;
+// ===== 绑定 UI =====
+let gSeed = null;
+let gRoot = null;
 
-// ===== Auto load wordlist in background =====
+// 页面加载时自动加载词表并启用“生成”
 document.addEventListener('DOMContentLoaded', async ()=>{
-  const tip = $('wl-tip');
-  try{
+  try {
     await loadWordlistOnce();
-    if (tip) tip.innerHTML = '<span class="ok">词表已加载并通过校验。</span>';
-    const btn = $('btn-gen'); if (btn) btn.disabled=false;
-  }catch(e){
-    if (tip) tip.innerHTML = '<span class="err">词表加载失败：'+(e?.message||e)+'</span>';
+    $('wl-tip')?.insertAdjacentHTML('beforeend','<span class="ok">词表已加载并通过校验。</span>');
+    const btn = $('btn-gen'); if (btn) btn.disabled = false;
+  } catch(e) {
+    $('wl-tip')?.insertAdjacentHTML('beforeend', `<span class="err">词表加载失败：${e?.message||e}</span>`);
     console.error(e);
   }
 });
 
-// ===== Handlers =====
-const btnLoad = $('btn-load');
-if (btnLoad){
-  btnLoad.onclick = async ()=>{
-    const tip=$('wl-tip');
-    try{ await loadWordlistOnce(); if(tip) tip.innerHTML='<span class="ok">词表加载并通过校验。</span>'; $('btn-gen').disabled=false; }
-    catch(e){ if(tip) tip.innerHTML='<span class="err">失败：'+(e?.message||e)+'</span>'; console.error(e); }
-  };
-}
+// 仍保留“手动加载”
+$('btn-load')?.addEventListener('click', async ()=>{
+  const tip = $('wl-tip');
+  try{
+    await loadWordlistOnce();
+    tip && (tip.innerHTML = '<span class="ok">词表加载并通过校验。</span>');
+    const btn = $('btn-gen'); if (btn) btn.disabled = false;
+  }catch(e){
+    tip && (tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>');
+    console.error(e);
+  }
+});
 
-$('btn-gen').onclick = async ()=>{
+// 生成助记词 & Seed
+$('btn-gen')?.addEventListener('click', async ()=>{
   const tip = $('mn-tip');
   try{
-    const ent  = parseInt(($('sl-words').value||'128'),10);
-    const pass = ($('in-pass').value||'').normalize('NFKD');
+    const ent = parseInt(($('sl-words')?.value||'128'),10);
+    const pass = ($('in-pass')?.value||'').normalize('NFKD');
     const mnemonic = await genMnemonic(ent);
     const seed     = await mnemonicToSeed(mnemonic, pass);
     gSeed = seed;
 
-    if ($('out-mnemonic')) $('out-mnemonic').textContent = mnemonic;
-    if ($('out-seed'))     $('out-seed').textContent     = bytesToHex(seed);
-    if ($('mnemo-box'))    $('mnemo-box').style.display  = 'block';
+    $('out-mnemonic') && ( $('out-mnemonic').textContent = mnemonic );
+    $('out-seed')     && ( $('out-seed').textContent     = bytesToHex(seed) );
+    $('mnemo-box')    && ( $('mnemo-box').style.display  = 'block' );
 
     gRoot = await bip32RootFromSeed(seed);
-    if ($('out-root-xprv')) $('out-root-xprv').textContent = gRoot.xprv;
-    if ($('out-root-xpub')) $('out-root-xpub').textContent = gRoot.xpub;
-    if ($('root-box'))      $('root-box').style.display    = 'block';
+    $('out-root-xprv') && ( $('out-root-xprv').textContent = gRoot.xprv );
+    $('out-root-xpub') && ( $('out-root-xpub').textContent = gRoot.xpub );
+    $('root-box')      && ( $('root-box').style.display    = 'block' );
 
-    if ($('drv-tip')) $('drv-tip').textContent='';
-    if ($('btn-derive')) $('btn-derive').disabled=false;
+    $('drv-tip') && ( $('drv-tip').textContent = '' );
+    const b = $('btn-derive'); if (b) b.disabled = false;
   }catch(e){
-    if (tip) tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>';
+    tip && (tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>');
     console.error(e);
   }
-};
+});
 
-$('btn-derive').onclick = async ()=>{
+// 派生 m/44'/60'/0'/0 的 xprv/xpub，并演示地址(索引 0)
+$('btn-derive')?.addEventListener('click', async ()=>{
   const tip = $('drv-tip');
   try{
     if (!gRoot) throw new Error('请先生成 Seed / Root');
@@ -347,20 +344,22 @@ $('btn-derive').onclick = async ()=>{
     node = await CKDpriv(node, 0,  true);
     node = await CKDpriv(node, 0,  false);
 
-    if ($('out-path-xprv')) $('out-path-xprv').textContent = node.xprv;
-    if ($('out-path-xpub')) $('out-path-xpub').textContent = node.xpub;
+    $('out-path-xprv') && ( $('out-path-xprv').textContent = node.xprv );
+    $('out-path-xpub') && ( $('out-path-xpub').textContent = node.xpub );
+    $('path-box')      && ( $('path-box').style.display    = 'block' );
 
-    // ETH address
-    const addr = deriveEthAddressFromNode(node);
-    if ($('out-eth-addr')) $('out-eth-addr').textContent = addr;
+    // 示例：从 account xprv 再推一个非硬化子 0，用未压缩公钥做 ETH 地址
+    const child0 = await CKDpriv(node, 0, false);
+    const pubUncomp = secp.getPublicKey(child0.key, false); // 65 bytes (0x04+XY)
+    const ethAddr = ethAddressFromUncompressed(pubUncomp);
+    $('out-eth-addr') && ( $('out-eth-addr').textContent = ethAddr );
 
-    if ($('path-box')) $('path-box').style.display='block';
-    if (tip) tip.textContent='完成。';
+    tip && (tip.textContent = '完成。');
   }catch(e){
-    if (tip) tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>';
+    tip && (tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>');
     console.error(e);
   }
-};
+});
 </script>
 
 </body>
