--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -129,7 +129,7 @@
 // ===== 依赖（ESM）=====
 import * as secp from 'https://esm.run/@noble/secp256k1@1.7.1';
 import { ripemd160 } from 'https://esm.run/@noble/hashes@1.4.0/ripemd160';
-import { keccak_256 } from 'https://cdn.jsdelivr.net/npm/js-sha3@0.9.2/+esm';
+import { keccak_256 } from 'https://esm.sh/@noble/hashes@1.4.0/sha3';
 
 // ===== 小工具 =====
 const te = new TextEncoder();
